--- a/app/src/main/res/layout/status_bar_expanded.xml
+++ b/app/src/main/res/layout/status_bar_expanded.xml
@@ -3,41 +3,46 @@
     android:id="@+id/status_bar_expanded"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:visibility="gone">
+    android:background="#e4e1e1"
+    android:orientation="vertical">
 
+    <!--<LinearLayout-->
+    <!--android:layout_weight="1"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
 
     <TextView
-        android:background="#9c6464"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#9c6464"
         android:gravity="center"
         android:text="通知1"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <TextView
-        android:background="#122c39"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#122c39"
         android:gravity="center"
         android:text="通知2"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <TextView
-        android:background="#308581"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#308581"
         android:gravity="center"
         android:text="通知3"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
-    <TextView
-        android:background="#ad2b97"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="通知4"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+    <!--</LinearLayout>-->
+
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="10dp"-->
+    <!--android:background="#FFF" />-->
 
 
 </LinearLayout>
