--- a/app/src/main/res/layout/layout_base_systemui.xml
+++ b/app/src/main/res/layout/layout_base_systemui.xml
@@ -16,7 +16,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:visibility="invisible" />
 
         <include
             layout="@layout/status_bar_expanded"
